# 3DTok

./: .gitignore  README.md  eval.py  pyproject.toml  tokenization.py  tokenize.py  train.py
configs/: config.py
data/: shapenet_dataset.py
model/: layers.py  model.py
scripts/: eval.sh  tokenize.sh  train.sh
utils/: eval_utils.py  train_utils.py  trainer.py  visualizer.py  wandb_utils.py
