[project]
name = "3dtok"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.6",
    "ninja>=1.13.0",
    "numpy>=2.3.3",
    "pytest>=8.4.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "tabulate>=0.9.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "vector-quantize-pytorch>=1.23.2",
    "wandb>=0.21.4",
]
